2010-12-10  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20101210
	  Merge with NetBSD make, pick up
	  o meta_oodate: track cwd per process, and only consider target
	    out-of-date if missing file is outside make's CWD.
	    Ignore files in /tmp/ etc.
	  o to ensure unit-tests results match, need to control LC_ALL
	    as well as LANG.
	  o fix for parsing bug in var.c

2010-11-26  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20101126
	  Merge with NetBSD make, pick up
	  o if stale dependency is an IMPSRC, search via .PATH
	  o meta_oodate: if a referenced file is missing, target is
	    out-of-date.
	  o meta_oodate: if a target uses .OODATE in its commands,
	    it (.OODATE) needs to be recomputed.
	  o keep a pointer to youngest child node, rather than just its
	    mtime.
	
2010-11-02  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20101101

2010-10-16  Simon J. Gerraty  <sjg@bad.crufty.net>

	* machine.sh: like os.sh, 
	allow for uname -p producing useless drivel

2010-09-13  Simon J. Gerraty  <sjg@bad.crufty.net>

	* boot-strap: document configure knobs for meta and filemon.

	* Makefile.in (MAKE_VERSION): bump version to 20100911
	  Merge with NetBSD make, pick up
	  o meta.c - meta mode

	* make-bootstrap.sh.in: handle meta.c
	* configure.in: add knobs for use_meta and filemon_h
	  also, look for dirname, str[e]sep and strlcpy
	* util.c: add simple err[x] and warn[x]

2010-08-08  Simon J. Gerraty  <sjg@bad.crufty.net>

	* boot-strap (TOOL_DIFF): set this to ensure tests use
	  the same version of diff that configure tested

	* Makefile.in (MAKE_VERSION): bump version to 20100808
	  Merge with NetBSD make, pick up
	  o in jobs mode, when we discover we cannot make something,
	    call PrintOnError before exit.
	
2010-08-06  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile.in (MAKE_VERSION): bump version to 20100806