@@ -1,4 +1,4 @@
-/*	$NetBSD: parse.c,v 1.165 2010/09/13 15:36:57 sjg Exp $	*/
+/*	$NetBSD: parse.c,v 1.169 2010/12/13 05:01:56 dholland Exp $	*/
 
 /*
  * Copyright (c) 1988, 1989, 1990, 1993
@@ -69,14 +69,14 @@
  */
 
 #ifndef MAKE_NATIVE
-static char rcsid[] = "$NetBSD: parse.c,v 1.165 2010/09/13 15:36:57 sjg Exp $";
+static char rcsid[] = "$NetBSD: parse.c,v 1.169 2010/12/13 05:01:56 dholland Exp $";
 #else
 #include <sys/cdefs.h>
 #ifndef lint
 #if 0
 static char sccsid[] = "@(#)parse.c	8.3 (Berkeley) 3/19/94";
 #else
-__RCSID("$NetBSD: parse.c,v 1.165 2010/09/13 15:36:57 sjg Exp $");
+__RCSID("$NetBSD: parse.c,v 1.169 2010/12/13 05:01:56 dholland Exp $");
 #endif
 #endif /* not lint */
 #endif
@@ -136,24 +136,12 @@ __RCSID("$NetBSD: parse.c,v 1.165 2010/09/13 15:36:57 sjg Exp $");
 #include "buf.h"
 #include "pathnames.h"
 
-/*
- * These values are returned by ParseEOF to tell Parse_File whether to
- * CONTINUE parsing, i.e. it had only reached the end of an include file,
- * or if it's DONE.
- */
-#define	CONTINUE	1
-#define	DONE		0
-static Lst     	    targets;	/* targets we're working on */
-#ifdef CLEANUP
-static Lst     	    targCmds;	/* command lines for targets */
-#endif
-static Boolean	    inLine;	/* true if currently in a dependency
-				 * line or its commands */
-static int	    fatals = 0;
+////////////////////////////////////////////////////////////
+// types and constants
 
-static GNode	    *mainNode;	/* The main target to create. This is the
-				 * first target on the first dependency
-				 * line in the first makefile */
+/*
+ * Structure for a file being read ("included file")
+ */
 typedef struct IFile {
     const char      *fname;         /* name of file */
     int             lineno;         /* current line number in file */
@@ -169,23 +157,17 @@ typedef struct IFile {
 } IFile;
 
 #define IFILE_BUFLEN 0x8000
-static IFile	    *curFile;
-
 
 /*
- * Definitions for handling #include specifications
+ * These values are returned by ParseEOF to tell Parse_File whether to
+ * CONTINUE parsing, i.e. it had only reached the end of an include file,
+ * or if it's DONE.
  */
+#define CONTINUE	1
+#define DONE		0
 
-static Lst      includes;  	/* stack of IFiles generated by .includes */
-Lst         	parseIncPath;	/* list of directories for "..." includes */
-Lst         	sysIncPath;	/* list of directories for <...> includes */
-Lst         	defIncPath;	/* default directories for <...> includes */
-
-/*-
- * specType contains the SPECial TYPE of the current target. It is
- * Not if the target is unspecial. If it *is* special, however, the children
- * are linked as children of the parent but not vice versa. This variable is
- * set in ParseDoDependency
+/*
+ * Tokens for target attributes
  */
 typedef enum {
     Begin,  	    /* .BEGIN */
@@ -224,15 +206,73 @@ typedef enum {
     Attribute	    /* Generic attribute */
 } ParseSpecial;
 
+/*
+ * Other tokens
+ */
+#define LPAREN	'('
+#define RPAREN	')'
+
+
+////////////////////////////////////////////////////////////
+// result data
+
+/*
+ * The main target to create. This is the first target on the first
+ * dependency line in the first makefile.
+ */
+static GNode *mainNode;
+
+////////////////////////////////////////////////////////////
+// eval state
+
+/* targets we're working on */
+static Lst targets;
+
+#ifdef CLEANUP
+/* command lines for targets */
+static Lst targCmds;
+#endif
+
+/*
+ * specType contains the SPECial TYPE of the current target. It is
+ * Not if the target is unspecial. If it *is* special, however, the children
+ * are linked as children of the parent but not vice versa. This variable is
+ * set in ParseDoDependency
+ */
 static ParseSpecial specType;
 
-#define	LPAREN	'('
-#define	RPAREN	')'
 /*
  * Predecessor node for handling .ORDER. Initialized to NULL when .ORDER
  * seen, then set to each successive source on the line.
  */
 static GNode	*predecessor;
+
+////////////////////////////////////////////////////////////
+// parser state
+
+/* true if currently in a dependency line or its commands */
+static Boolean inLine;
+
+/* number of fatal errors */
+static int fatals = 0;
+
+/*
+ * Variables for doing includes
+ */
+
+/* current file being read */
+static IFile *curFile;
+
+/* stack of IFiles generated by .includes */
+static Lst includes;
+
+/* include paths (lists of directories) */
+Lst parseIncPath;	/* dirs for "..." includes */
+Lst sysIncPath;		/* dirs for <...> includes */
+Lst defIncPath;		/* default for sysIncPath */
+
+////////////////////////////////////////////////////////////
+// parser tables
 
 /*
  * The parseKeywords table is searched using binary search when deciding
@@ -241,7 +281,7 @@ static GNode	*predecessor;
  * the 'op' field is the operator to apply to the list of targets if the
  * keyword is used as a source ("0" if the keyword isn't special as a source)
  */
-static struct {
+static const struct {
     const char   *name;    	/* Name of keyword */
     ParseSpecial  spec;	    	/* Type when used as a target */
     int	    	  op;	    	/* Operator when used as a source */
@@ -290,6 +330,9 @@ static struct {
 { ".WAIT",	  Wait, 	0 },
 };
 
+////////////////////////////////////////////////////////////
+// local functions
+
 static int ParseIsEscaped(const char *, const char *);
 static void ParseErrorInternal(const char *, size_t, int, const char *, ...)
      __attribute__((__format__(__printf__, 4, 5)));
@@ -315,8 +358,8 @@ static char *ParseReadLine(void);
 static void ParseFinishLine(void);
 static void ParseMark(GNode *);
 
-extern int  maxJobs;
-
+////////////////////////////////////////////////////////////
+// code
 
 /*-
  *----------------------------------------------------------------------
@@ -410,7 +453,7 @@ ParseVErrorInternal(FILE *f, const char *cfname, size_t clineno, int type,
 			const char *dir;
 
 			/*
-			 * Nothing is more anoying than not knowing
+			 * Nothing is more annoying than not knowing
 			 * which Makefile is the culprit.
 			 */
 			dir = Var_Value(".PARSEDIR", VAR_GLOBAL, &cp);
